# Lava_Monster

./: CMakeLists.txt  README.md  hermione.txt  main.cpp  potter.txt  riddles.txt  snape.txt
Darkness_Monsters/: Closet_Monster.cpp  Closet_Monster.h  Darkness_Monster.cpp  Darkness_Monster.h  Darkness_Monster_Main.cpp  Darkness_Monster_Testing.cpp  Under_Bed_Monster.cpp  Under_Bed_Monster.h
Lava_Monsters/: Crack_Monster.cpp  Crack_Monster.h  Lava_Monster.cpp  Lava_Monster.h  Lava_Monster_Main.cpp  Rock_Monster.cpp  Rock_Monster.h  snape.csv
Sky_Monsters/: Cloud_Monster.cpp  Cloud_Monster.h  Comet_Monster.cpp  Comet_Monster.h  Sky_Monster.cpp  Sky_Monster.h  Sky_Monster_Testing.cpp
Water_Monsters/: Lake_Monster.cpp  Lake_Monster.h  Sea_Monster.cpp  Sea_Monster.h  Water_Monster.cpp  Water_Monster.h  Water_Monster_Main.cpp  Water_Monster_Testing.cpp
Woods_Monster/: Cemetery_Monster.cpp  Cemetery_Monster.h  Gorilla_With_Fifty_Arms.cpp  Gorilla_With_Fifty_Arms.h  Woods_Monster.cpp  Woods_Monster.h  Woods_Monster_Main.cpp
